<?xml version="1.0"?>
<package format="2">
  <name>dr_pam</name>
  <version>0.0.0</version>
  <description>The dr_pam package</description>
  <maintainer email="vivek@todo.todo">vivek</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
